--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Node ###
 # Logs
 logs
 *.log
@@ -29,14 +30,15 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
+# Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
 node_modules/
 jspm_packages/
+package-lock.json
 
-# TypeScript v1 declaration files
+# Typescript v1 declaration files
 typings/
 
 # Optional npm cache directory
@@ -57,5 +59,5 @@ typings/
 # dotenv environment variables file
 .env
 
-# next.js build output
-.next
+# Dist
+/dist
