--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
-    "editor.tabSize":2,
-    "eslint.alwaysShowStatus":"true",
-    "javascript.validate.enable":"false",
-    "javascript.format.enable":"false",
-    "flow.enabled":"true",
-    "flow.useNPMPackagedFlow":"true"
-    
+    "javascript.validate.enable": false,
+    "javascript.format.enable": false,
+    "flow.enabled": true,
+    "flow.useNPMPackagedFlow": true,
+    "eslint.alwaysShowStatus": true,
+    "editor.tabSize": 2,
 }
