--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.0",
     "helmet": "^3.18.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
