--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.6",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-jwt": "^5.3.1",
+    "express-unless": "^0.5.0",
     "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1"
   },
