--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "src/index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index --exec babel-node --presets-env"
+    "start": "nodemon src/index --exec babel-node --presets-env",
+    "build": "babel src -d dist"
   },
   "author": "Lazov Lazar",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.492.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
@@ -22,7 +24,8 @@
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
